Environment variables and path additions are now stored in /etc/profile.d